--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "@slovo/starters",
-  "version": "1.0.2",
+  "name": "@tvolodimir/starters",
+  "version": "1.0.3",
   "description": "generate starters for you",
   "author": "Volodymyr Terebus @tvolodimir",
   "keywords": [
-    "oclif", "starter", "cli", "boilerplate", "template"
+    "oclif",
+    "starter",
+    "cli",
+    "boilerplate",
+    "template"
   ],
   "bin": {
     "starters": "./bin/run"
@@ -17,7 +21,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "posttest": "tslint -p . -t stylish",
-    "prepack": "rimraf lib && tsc -b",
+    "build": "rimraf lib && tsc -b",
     "test": "echo NO TESTS",
     "start": "ts-node src/index.ts"
   },
@@ -29,22 +33,13 @@
     "inquirer": "^7.0.0"
   },
   "devDependencies": {
-    "@oclif/config": "^1.13.3",
-    "@oclif/plugin-help": "^2.2.1",
-    "@oclif/tslint": "^3.1.1",
     "@types/ejs": "^2.6.3",
     "@types/inquirer": "^6.5.0",
-    "@types/shelljs": "^0.8.5",
-    "@types/yargs": "^13.0.2",
     "@types/node": "^10.14.18",
-    "yargs": "^14.0.0",
-    "shelljs": "^0.8.3",
-    "shx": "^0.3.2",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "tslib": "^1.10.0"
+    "typescript": "^3.6.3"
   },
   "files": [
     "/bin",
@@ -52,7 +47,7 @@
     "/templates"
   ],
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "oclif": {
     "bin": "starters"
